# imaging

./: .gitignore  .travis.yml  README.md  test.sh
autonomous/: README.md
autonomous/autonomous_classification/: autonomous_classification.py
autonomous/cnn-classifier/: finetuning_torchvision_models_tutorial.py  letter_predictor.py  letter_shape_predictor.py  letter_shape_squeezenet_trainer.py  shape_predictor.py
autonomous/generate_dataset/: README.md  create_validation_set.py  generate_dataset.jsx  generate_dataset.py  (+3 more)
client/: README.md  client_gui.py  client_rest.py  gui.py  opencv.py  setup.py  tk_tab_sample.py
geolocation/: geolocation.m  geolocation.py
server/: CMakeLists.txt  README.md  config.py  dao.py  dev_setup.sh  package.xml  setup.py  setup_database.sql  snapcraft.yaml
server/conf/: config.ini
server/msg/: InteropImage.msg  README.md
server/setup/: Dockerfile  dev_setup.sh  production_setup.sh  setup_database.sql  setup_docker_image.sh  start_docker_img.sh
server/setup/internal/: docker_startup.sh  pip-requirements.txt  server-conda-reqs-mac.yaml  server-pip-requirements.txt  server_supervisor.conf  setup_database.sql  supervisor.conf
server/src/: README.md  config.py  dao.py  dao_test.py  generate_api_tests.py  gps_msg.py  incoming_image.py  incoming_state.py  outgoing_data.py  ros_handler.py  ros_ingest.py  rosbag_ingester.py  server.py  setup_db_for_client_tests.py  test.py
server/src/api/: image_handler.py
server/src/apis/: __init__.py  autonomous_image_classification_handler.py  crop_image_handler.py  gps_handler.py  helper_methods.py  image_classification_handler.py  image_submit_handler.py  manual_image_classification_handler.py  raw_image_handler.py  state_handler.py  util_handler.py
server/src/dao/: __init__.py  auvsi_odlc_file_dao.py  base_dao.py  classification_dao.py  cropped_autonomous_dao.py  cropped_image_dao.py  cropped_manual_dao.py  incoming_gps_dao.py  incoming_image_dao.py  incoming_state_dao.py  manual_cropped_dao.py  outgoing_autonomous_dao.py  outgoing_manual_dao.py  submitted_target_dao.py  util_dao.py
server/src/dao/model/: cropped_autonomous.py  cropped_image.py  cropped_manual.py  incoming_gps.py  incoming_image.py  incoming_state.py  manual_cropped.py  outgoing_autonomous.py  outgoing_classification.py  outgoing_manual.py  outgoing_target.py  point.py  submitted_target.py
server/src/geolocation/: geolocation.py  geolocation_service.py
server/src/geolocation/html/: geolocation.html
server/src/geolocation/matlab/: Coordinates.m  geolocation.m
server/src/geolocation/target-30deg-4thfloorEB/: README
server/src/test/: auvsi_odlc_test.py  base_dao_test.py  classification_test.py  cropped_test.py  dao_test.py  geolocation_test.py  incoming_gps_test.py  incoming_image_test.py  incoming_state_test.py  manual_cropped_test.py  setup_db_for_client_tests.py  submitted_target_test.py  test_helpers.py  util_dao_test.py
server/util/: docs.conf  generate_docs.sh
(+61 files in other folders)
